@@ -1,3 +1,10 @@
+2000-06-01  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>
+
+	* emacs/mhc-calendar.el (mhc-calendar-hnf-face-setup): Do ditto mhc-face-setup.
+	(mhc-calendar-hnf-edit): Call hnf-initial-function like hns.
+	(mhc-calendar-hnf-mark-diary-entries): Fatal bug fix ^^;
+	(mhc-calendar-hnf-summary-insert): More colorful, but i have no knowledge of hnf.
+	
 2000-05-31  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>
 
 	* emacs/mhc.el (mhc-sync): New function.
